[package]
name = "sflow"
version = "0.0.1"
authors = ["Tarrant Rollins <tarrant@keyneston.com>"]

description = "Simple decoder for reading sFlow udp packets"
homepage = "https://github.com/tarrant/rust-sflow"
keywords = ["sflow", "decoder", "network"]
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/tarrant/rust-sflow"

[dependencies]
rustc-serialize = "0.3.16"
byteorder = "0.4.2"
num = "0.1.30"
